<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PatelActivity4"
    android:orientation="vertical">


    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/pizzaTypeTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshPType"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/pizzaSizeTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshPSize"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/pizzaToppingTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshPTopp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/nameTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshUname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>
        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/creditTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshUcredit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />


        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/addTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshUadd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />




        </TableRow>


        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginBottom="10dp"
                android:textColor="#000"
                android:layout_weight="1"
                android:text="@string/provinceTag"
                android:textSize="20sp"
                />

            <TextView
                android:id="@+id/harshUProvince"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:textSize="20sp"
                />




        </TableRow>

    </TableLayout>

    <Button
        android:id="@+id/harshCheckTBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/checkOutBtnTag"
        android:layout_gravity="center_horizontal"/>
</LinearLayout>